apps/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    toolkit.fluxcd.io/tenant: home-lab
